# pySnapshot

./: .gitignore  README.md  example_config.toml  pyproject.toml  scdm_snapshot_db.sql
docs/design-plans/: 2026-04-08-python-port.md
src/scdm_snapshot_db/: __init__.py  benchmark.py  cli.py  comparison.py  config_loading.py  config_models.py  config_validation.py  error_classification.py  input_validation.py  inputs.py  logging_setup.py  models.py  outputs.py  pipeline.py  schema_contracts.py  spark_session.py
src/scdm_snapshot_db/transforms/: __init__.py  death.py  demographic.py  dispensing.py  encounter.py  enrollment.py  event_in_window.py  lab.py  mil.py
tests/: conftest.py  synthetic_data.py  test_benchmark.py  test_comparison.py  test_config.py  test_config_loading.py  test_domain_transforms.py  test_enrollment_transforms.py  test_error_classification.py  test_integration.py  test_mil_transforms.py  test_schema_contracts.py  test_static_analysis.py
tests/data/: scdm_schema.json  scdm_schema.json.provenance
